--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -7250,7 +7250,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 106,
+            "execution_count": 112,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "y_train_pred = clf.predict(X_train)\n",
+                "y_test_pred = clf.predict(X_test)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 113,
             "metadata": {},
             "outputs": [
                 {
@@ -7259,12 +7269,12 @@
                     "text": [
                         "              precision    recall  f1-score   support\n",
                         "\n",
-                        "    Negativo       0.96      0.83      0.89       400\n",
-                        "    Positivo       0.75      0.93      0.83       214\n",
+                        "    Negativo       0.76      0.90      0.82       400\n",
+                        "    Positivo       0.72      0.47      0.57       214\n",
                         "\n",
-                        "    accuracy                           0.86       614\n",
-                        "   macro avg       0.85      0.88      0.86       614\n",
-                        "weighted avg       0.88      0.86      0.87       614\n",
+                        "    accuracy                           0.75       614\n",
+                        "   macro avg       0.74      0.69      0.70       614\n",
+                        "weighted avg       0.75      0.75      0.74       614\n",
                         "\n"
                     ]
                 }
@@ -7275,7 +7285,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 107,
+            "execution_count": 114,
             "metadata": {},
             "outputs": [
                 {
@@ -7284,12 +7294,12 @@
                     "text": [
                         "              precision    recall  f1-score   support\n",
                         "\n",
-                        "    Negativo       0.86      0.84      0.85       100\n",
-                        "    Positivo       0.71      0.74      0.73        54\n",
+                        "    Negativo       0.77      0.97      0.86       100\n",
+                        "    Positivo       0.89      0.46      0.61        54\n",
                         "\n",
-                        "    accuracy                           0.81       154\n",
-                        "   macro avg       0.79      0.79      0.79       154\n",
-                        "weighted avg       0.81      0.81      0.81       154\n",
+                        "    accuracy                           0.79       154\n",
+                        "   macro avg       0.83      0.72      0.73       154\n",
+                        "weighted avg       0.81      0.79      0.77       154\n",
                         "\n"
                     ]
                 }
